# valter-v9

./: CMakeLists.txt  EvidencijaKCBar.pro  INSTALACIJA.md  README.md  installer.iss
.github/workflows/: test.yml
keygen/: ValterKeygen.pro  keygen.cpp  keygen.h  main_keygen.cpp
src/: filmdialog.cpp  filmdialog.h  lang.h  license.cpp  license.h  licensedialog.cpp  licensedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  theme.h
